# magic_click

./: .setup.cfg.un~  Readme.md  auto.sh  setup.cfg  setup.cfg~
c++/: CMakeLists.txt  multi_thread_for_test.cpp
c++_deprecated/: cpp_compile.sh  demo.py  factor_read_cpython.py  multi_thread.cpp
python_deprecated/: unused.py
src/DataPlatForm/: FactorRead.py  FactorWrite.py  RawRead.py  RawWrite.py  Utils.py  configs.py
src/FastClick/: MarketCrawler.py  MarketWriter.py  Utils.py  configs.py
src/MagicClick/: BasicUtils.py  CrawlerUtils.py  KCrawler.py  MarketCrawler.py  MarketWriter.py  Utils.py  configs.py
src/magic_click.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rdsp_client_ck.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: .magic_click_test.py.un~  crawer_test.py  magic_click_test.py  magic_click_test.py~
